# Kassakoppeling

./: CMakeLists.txt  Kassakoppeling.kdev4  README.md  config.conf  config_file.h  datetime.cpp  datetime.h  errorhandler.cpp  logger.cpp  logger.h  main.cpp  product.cpp  rs232.c  serial_reader.h  supermarket.cpp  supermarket.h  supermarket_base.cpp  supermarket_base.h  task.h  webclient.cpp  webclient.h
.kdev4/: Kassakoppeling.kdev4
Kassakoppeling/: CMakeLists.txt  active_product.cpp  active_product.h  chameleon.cpp  config.conf  config_file.cpp  errorhandler.h  http.cpp  http.h  logger.h  product.h  rs232.h  serial_reader.cpp  supermarket.cpp  supermarket_base.cpp  supermarket_base.h  task.cpp  utility.cpp  utility.h  utils.cpp  utils.h
